# UniMatch-django-backend

./: .gitignore  ANNNNTOOOON.MD  ANTOOOON.MD  API_DOC.MD  API_USER_DOC.MD  Dockerfile  README.MD  TRASH_DOC.MD  dump.rdb  pyproject.toml  pyrightconfig.json  req.txt  run_uwsgi.sh
djangoProject/: celery.py  schema.py  settings.py  urls.py  utils.py
users/: admin.py  algorithm.py  api_views.py  celery.py  celery_tasks.py  forms.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_uniq_code.py
users/templates/users/: custom_password_reset.html  get_bot.html  login.html  pairs.html  signup.html  tg_auth.html  tg_login.html
users/utils/: check_sign.py  generate_pairs.py  generate_pairs_first.py
