[project]
name = "djangoproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "djoser>=2.3.3",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.10",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.3",
]
